data/derived/fa15/progs/unify/prog3415.ml.out
Characters 88-89:
  |h::t -> if List.length t = 0 then [h * i] @ mulByDigit i t
                                          ^
Error: This expression has type int list
       but an expression was expected of type int
